succesfully running 2 microservices on docker-compose which are front-end and api. working on linking them together so front-end is not hardcoded

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,12 @@ services:
     volumes:
       - ./results-api/src:/app
       # This mounts the .results-api/src directory on our host computer to the /app directory in the container. 
+
+
+  front-end:
+      build:
+        context: ./front-end
+      ports:
+        - 5000:5000
+      volumes:
+        - ./front-end/src:/app
