front-end and api are succesfully linked, working on linking api to postgress instance

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     #env_file: database.conf
     ports:
       - 5001:5000
+    
     volumes:
       - ./results-api/src:/app
       # This mounts the .results-api/src directory on our host computer to the /app directory in the container. 
@@ -20,6 +21,8 @@ services:
   front-end:
       build:
         context: ./front-end
+      environment:
+      - RESULTS_API_SERVER=http://results-api:5000
       ports:
         - 5000:5000
       volumes:
