api container is receiving data correctly from postgress container. will add portion on front-end for user to add solutions

--- a/database.conf
+++ b/database.conf
@@ -1,5 +1,5 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password
+POSTGRES_USER=docker
+POSTGRES_PASSWORD=docker
 POSTGRES_HOST=postgres-database
 POSTGRES_PORT=5432
-POSTGRES_DB=nQueens
+POSTGRES_DB=docker
