--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: python
 
 python:
-  - "3.6"
-  - "3.7"
+  - "2.7"
+
+cache: pip
+
+install:
+  - pip install -r requirements.txt
 
 script:
   - py.test app_test.py
