--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - py.test app_test.py
+  - pytest app_test.py
 
 
 # https://www.smartfile.com/blog/testing-python-with-travis-ci/
