--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 cache: pip
 
 install:
-  - pip install -r requirements.txt
+  - pip install pytest==2.9.1
 
 script:
   - pytest app_test.py
