--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,9 @@
 language: python
 
 python:
-  - "2.7"
+ - "3.6"
 
-cache: pip
-
-install:
-  - pip install pytest==2.9.1
-
-script:
-  - pytest app_test.py
+script: python app_test.py
 
 
 # https://www.smartfile.com/blog/testing-python-with-travis-ci/
