--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: python
 python:
  - "3.6"
 
+cache: pip
+
+install:
+  - pip install -r requirements.txt
+
 script: python app_test.py
 
 
