last travis build passed. adding conftest to setup for tests on api, added gitignore and edited docker env variables

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-DATABASE_URI = 'postgres+psycopg2://postgres:170482@localhost:5432/Nqueens'
+POSTGRES_USER = docker
+POSTGRES_PASSWORD = docker
+POSTGRES_HOST = postgres-database
+POSTGRES_DB = docker
+POSTGRES_PORT = 5432
+RESULTS_API_SERVER = http://results-api:5000
