--- a/database.conf
+++ b/database.conf
@@ -1,5 +1,7 @@
-POSTGRES_USER=docker
-POSTGRES_PASSWORD=docker
-POSTGRES_HOST=postgres-database
-POSTGRES_PORT=5432
-POSTGRES_DB=docker
+import os
+
+POSTGRES_USER = os.environ['POSTGRES_USER']
+POSTGRES_PASSWORD = os.environ['POSTGRES_PASSWORD']
+POSTGRES_HOST = os.environ['POSTGRES_HOST']
+POSTGRES_DB = os.environ['POSTGRES_DB']
+POSTGRES_PORT = os.environ['POSTGRES_PORT']
