--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,13 @@ python:
 
 cache: pip
 
+services:
+  - docker
+
+before_install:
+  - docker-compose build
+  - docker-compose up
+
 install:
   - pip install -r requirements.txt
 
