--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-import os
 
 version: '3.5'
 # version of docker-compose that we are using
@@ -12,10 +11,11 @@ services:
       context: ./api
       # where the Dockerfile is located at to build the image
     env_file: database.conf
-      # dotenv file w/variables necessary to connect to postgress-database:5432
+    # dotenv file w/variables necessary to connect to postgress-database:5432
     ports:
       - 5001:5000  # <host machine>:<container> map ports from the host machine to the container
     # incoming requests at host port 5001 will be forwarded to the port 5000 of the api container
+    # runs on local computer at localhost:5001
     volumes:
       - ./results-api/src:/app
       # This mounts the .results-api/src directory on our host computer to the /app directory in the container. 
@@ -27,7 +27,7 @@ services:
       build:
         context: ./frontend
       environment:
-      - RESULTS_API_SERVER = os.environ['RESULTS_API_SERVER']
+      - RESULTS_API_SERVER = http://results-api:5000
       ports:
         - 5000:5000
       volumes:
