fixing env variables in DC.yml

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-POSTGRES_USER = docker
-POSTGRES_PASSWORD = docker
+POSTGRES_USER = test
+POSTGRES_PASSWORD = 1a2b3c
 POSTGRES_HOST = postgres-database
-POSTGRES_DB = docker
+POSTGRES_DB = queens
 POSTGRES_PORT = 5432
 RESULTS_API_SERVER = http://results-api:5000
