--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -13,7 +13,7 @@ WORKDIR /app
 
 # Expose flask's port
 EXPOSE 5000
-# in docker container this will run on port 5000 with assigned ip address (results-api)
+# in docker container this will run on port 5000 with ip address docker assigns it (ip address can be referenced by name of container)
 
 # Run the server
 CMD python server.py 
