upated ReadMe, updated Docker files because api and database containers are connecting properly on local computer but not on travis build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - POSTGRES_DB
       - POSTGRES_PORT
       - RESULTS_API_SERVER
-    # variables necessary to connect to postgress-database:5432
+    # variables necessary to connect to database
     ports:
       - 5001:5000  # <host machine>:<container> map ports from the host machine to the container
     # incoming requests at host port 5001 will be forwarded to the port 5000 of the api container
@@ -41,7 +41,7 @@ services:
         - results-api
 
   postgres-database:
-      image: postgres:latest
+      image: postgres
       # provides an instance of postgress database
       environment: 
         - POSTGRES_USER
@@ -52,8 +52,8 @@ services:
         - db_volume:/var/lib/postgresql
     # Inside the container, this directory is where Postgres stores all the relevant tables and databases.
     # We are defining a volume inside the compose file and mounting it at this mount point.
-    # ports not needed since docker image automatically exposes port 5432 and does not need access to/from local computer
-
+      ports:
+        - 5002:5432
 volumes:
   # For data persistence purposes, we are storing data in a mouted volume which we have named db-data
   db_volume:
