--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
   - docker # to build docker-compose containers for further api testing
 
 env:
-  - RESULTS_API_SERVER = http://api:5000
+  - RESULTS_API_SERVER = http://resultsapi:5000
 
 before_install:
   - sudo apt-get update
