--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,7 @@ before_install:
   - docker-compose --version
   - docker-compose pull
   - docker-compose build
-  - docker-compose start
-  - docker ps
+  - docker-compose up
 
 # https://medium.com/@elliotchance/using-docker-compose-on-travis-ci-6ce9664b51c4
 
