--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     # incoming requests at host port 5001 will be forwarded to the port 5000 of the api container
     # runs on local computer at localhost:5001
     volumes:
-      - ./resultsapi/src:/resultsapi
+      - ./resultsapi/src:/app
       - dbvolume:/var/lib/postgresql/data     # This mounts the .resultsapi/src directory on our host computer to the /app directory in the container. 
  #   depends_on:
 #      - postgres
