--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 # containters we want to run
   resultsapi:
   #name of service
-    # provides an API for CRUD* operations to database
+    # provides an API for CRUD operations to database
     build:
     # Docker parses the docker-compose file and builds our services according to the build instructions.
       context: ./resultsapi
@@ -20,10 +20,9 @@ services:
     ports:
       - 5001:5000  # <host machine>:<container> map ports from the host machine to the container
     # incoming requests at host port 5001 will be forwarded to the port 5000 of the api container
-    # runs on local computer at localhost:5001
     volumes:
       - ./resultsapi/src:/app
-    # This mounts the .resultsapi/src directory on our host computer to the /app directory in the container. 
+      # This mounts the .results-api/src directory on our host computer to the /app directory in the container. 
     depends_on:
       - postgresdb
     # it will wait for database to start before starting this service.
@@ -40,25 +39,21 @@ services:
       depends_on:
         - resultsapi
 
-  postgresdb:  # provides an instance of postgress database
-      image: postgres:latest 
+  postgresdb:
+      image: postgres:latest
+      # provides an instance of postgress database
       environment: 
        - POSTGRES_USER
        - POSTGRES_PASSWORD
-          # postgress automatically makes the user and password based on these env variables
+        # postgress automatically makes the user and password based on these env variables
         # so we can use this user and pswd on api to connect to db
       volumes:
-        - dbvolume:/var/lib/postgresql/
+        - dbvolume:/var/lib/postgresql
     # Inside the container, this directory is where Postgres stores all the relevant tables and databases.
     # We are defining a volume inside the compose file and mounting it at this mount point.
-  
+    # ports not needed since docker image automatically exposes port 5432
+
 volumes:
-  # For data persistence purposes, we are storing data in a mouted volume which we have named dbvolume
+  # For data persistence purposes, we are storing data in a mouted volume which we have named db-data
   dbvolume:
     driver: local
-
-  # postgress with docker-compose learned here: https://docs.docker.com/samples/library/postgres/
-  # and here: https://linuxhint.com/run_postgresql_docker_compose/
-  # and here: https://medium.com/@audretschjames/understanding-docker-as-if-it-were-a-gameboy-96c96392efbf
-
-# add a server to database and connect like api is doing, then that's the api?
