--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ python:
 install: skip
 
 cache: pip
+# cache content that does not often change, to speed up your build process. 
 
 script: python app_test.py # run tests
